# aiorelational

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: python-package.yml
aiorelational/: __init__.py
tests/: conftest.py  test_enumerate.py  test_filter.py  test_from_batches.py  test_full_outer_union.py  test_full_outer_union_distinct.py  test_full_outer_union_distinct_batched.py  test_groupby.py  test_inner_merge.py  test_inner_merge_join_o2o_batched.py  test_merge.py
