[tool.poetry]
name = "aiorelational"
version = "0.2.0"
description = ""
authors = ["Willem Thiart <himself@willemthiart.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
hypothesis = "^6.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
