[tool.poetry]
name = "aiorelational"
version = "0.8.1"
description = "Relational operators for working with Async iterators"
readme = "README.rst"
keywords = ["asyncio"]
license = "MIT"
authors = ["Willem Thiart <himself@willemthiart.com>"]
homepage = "https://github.com/willemt/aiorelational"
repository = "https://github.com/willemt/aiorelational"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = ["aiorelational/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
hypothesis = "^6.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
